welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: not found: value BaisseBrosse
         	gauche();avance();avance();BaisseBrosse;droite;LeveBrosse;avance();BaisseBrosse;gauche();LeveBrosse();avance();
                                           ^PictureMono:3: error: not found: value LeveBrosse
         	gauche();avance();avance();BaisseBrosse;droite;LeveBrosse;avance();BaisseBrosse;gauche();LeveBrosse();avance();
                                                               ^PictureMono:3: error: not found: value BaisseBrosse
         	gauche();avance();avance();BaisseBrosse;droite;LeveBrosse;avance();BaisseBrosse;gauche();LeveBrosse();avance();
                                                                                   ^PictureMono:3: error: not found: value LeveBrosse
         	gauche();avance();avance();BaisseBrosse;droite;LeveBrosse;avance();BaisseBrosse;gauche();LeveBrosse();avance();
                                                                                                         ^PictureMono:4: error: not found: value BaisseBrosse
BaisseBrosse();         }
^